--- a/index.html
+++ b/index.html
@@ -4,41 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index1.css">
     <script src="js/index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <title>Weather Forecast</title>
 </head>
 <body>
-    <!-- Maybe add a Navbar to go to the api section, coordinates link, lil intro, and footer -->
-<!-- OPEN API section-->
-    <section id="coordinates">
-        <h1>Weather Forecast</h1>
-        <p><i>Enter your coordinates!</i></p>
-        <form id="locationForm">
-            <label for="latitude">Latitude:</label>
-            <input type="number" id="latitude" name="latitude" step="any" required>
-            <label for="longitude">Longitude:</label>
-            <input type="number" id="longitude" name="longitude" step="any" required>
-            <button type="submit">Weather Details</button>
-        </form>
-        <div id="weatherData" class="hidden">
-            <h2>Current Weather:</h2>
-            <p>Temperature: <span id="temperature"></span> °F</p>
-            <p>Wind Speed: <span id="windSpeed"></span> mph</p>
-            <p>Wind Direction: <span id="windDirection"></span>°</p>
-        </div>
-    </section>
+<nav>
+    <div class="nav-container">
+        <div class="navbar-brand"><a href="index.html">Weather Forecast</a></div>
+    </div>
+</nav>
 
-    <!-- <section id="coordinatesLink">
-        <div>
-            <a href="https://www.latlong.net/"><i>Click on this link if you don't know your coordinates!</i></a>
-        </div>
-    </section> -->
-    <!-- Adding some info why I made this app. "I made this app because as these details are useful when preparing for a hike...blahblah" -->
-    <!-- Footer will be added with a copyright as these is/are my picture/s -->
+<section id="coordinates">
+    <h1>Weather Forecast</h1>
+    <p><i>Enter your coordinates!</i></p>
+    <form id="locationForm">
+        <label for="latitude">Latitude:</label>
+        <input type="number" id="latitude" name="latitude" step="any" required>
+        <label for="longitude">Longitude:</label>
+        <input type="number" id="longitude" name="longitude" step="any" required>
+        <button type="submit">Current Weather</button>
+        <button id="forecastButton" type="button">14-Day Forecast</button>
+        <button id="backButton" type="button">Back to Original</button>
+        <a href="https://www.latlong.net/" target="_blank"><i>Click on this link if you don't know your coordinates!</i></a>
+    </form>
+    <div id="weatherData" class="hidden">
+        <h2>Current Weather:</h2>
+        <p>Temperature: <span id="temperature"></span> °F</p>
+        <p>Wind Speed: <span id="windSpeed"></span> mph</p>
+        <p>Wind Direction: <span id="windDirection"></span>°</p>
+        <p id="weatherDescription">Wind speed & direction are only available for the current weather, as the forecast API only shows the min and max temperatures.</p>
+        <input type="button" value="Reset Coordinates" onClick="locationForm.reset()"/>
+    </div>
+    <div id="forecastData" class="hidden">
+        <h2>14-Day Forecast:</h2>
+        <div id="forecastList"></div>
+        <input type="button" value="Reset Coordinates" onClick="locationForm.reset()"/>
+    </div>    
+</section>
+
+<section id="about">
+    <h2>About This App</h2>
+    <p>This app provides current weather and 14-day weather forecast details based on the coordinates you enter. 
+        It is useful for activities such as hiking, traveling, and outdoor planning. 
+        Accurate weather information helps you prepare for any conditions you might encounter.</p>
+</section>
+    
+
+<footer>
+    <p>&copy; 2024 Melisse Zeigler. All rights reserved.</p>
+</footer>
 </body>
 </html>
